--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </form>
         <div id="result"></div>
         <div class="color-options">
-            <div class="color-option" style="background: linear-gradient(135deg, #f5f7fa, #c3cfe2);" data-color="#f5f7fa, #c3cfe2"></div>
-            <div class="color-option" style="background: linear-gradient(135deg, #ff9a9e, #fad0c4);" data-color="#ff9a9e, #fad0c4"></div>
-            <div class="color-option" style="background: linear-gradient(135deg, #a18cd1, #fbc2eb);" data-color="#a18cd1, #fbc2eb"></div>
-            <div class="color-option" style="background: linear-gradient(135deg, #ffecd2, #fcb69f);" data-color="#ffecd2, #fcb69f"></div>
-            <div class="color-option" style="background: linear-gradient(135deg, #a1c4fd, #c2e9fb);" data-color="#a1c4fd, #c2e9fb"></div>
-            <div class="color-option" style="background: linear-gradient(135deg, #d4fc79, #96e6a1);" data-color="#d4fc79, #96e6a1"></div>
+            <div class="color-option" data-color="#f5f7fa, #c3cfe2"></div>
+            <div class="color-option" data-color="#ff9a9e, #fad0c4"></div>
+            <div class="color-option" data-color="#a18cd1, #fbc2eb"></div>
+            <div class="color-option" data-color="#ffecd2, #fcb69f"></div>
+            <div class="color-option" data-color="#a1c4fd, #c2e9fb"></div>
+            <div class="color-option" data-color="#d4fc79, #96e6a1"></div>
         </div>
     </div>
     <script src="script.js"></script>
